# motis

./: .gitignore  CMakeLists.txt
base/core/include/motis/core/journey/: journey.h  journey_util.h
base/core/include/motis/core/schedule/: connection.h  constant_graph.h  edges.h  nodes.h  time.h
base/core/src/: journey_util.cc  journeys_to_message.cc  message_to_journeys.cc
base/loader/include/motis/loader/: graph_builder.h
base/loader/src/: graph_builder.cc  rule_service_graph_builder.cc
base/raptor-core/: CMakeLists.txt
base/raptor-core/include/motis/raptor-core/: cuda_util.h  gpu_timetable.h  raptor_query.h  raptor_result.h  raptor_timetable.h  raptor_util.h
base/raptor-core/include/motis/raptor-core/config/: config.h  configs.h  filters.h  traits.h
base/raptor-core/include/motis/raptor-core/config/traits/: max_occupancy.h  occupancy.h
base/raptor-core/src/: gpu_timetable.cc
cuda/: CMakeLists.txt
cuda/kernel/include/motis/kernel/: copy_timetable.cuh  gpu_raptor.cuh  hybrid_raptor.cuh
cuda/kernel/src/: cluster_raptor.cu  copy_timetable.cu  everything.cu  gpu_raptor.cu
gtfs_tools/gtfs-xtract/: dbg_to_route_trips.txt  eva_to_stop.txt  pom.xml  responses.txt
gtfs_tools/gtfs-xtract/src/main/java/org/example/: EmptyResultLister.java  GTFS_Xtract.java  OccupancyStats.java  QueryRewriteSearchType.java  ResponseDeconstruct.java  ResponseExtractor.java  ResultComparator.java  Utils.java
gtfs_tools/gtfs-xtract/src/main/java/org/example/data/: AbstractConnection.java  Stop.java
modules/csa/include/motis/csa/: csa.h  run_csa_search.h
modules/csa/src/: csa.cc  csa_query.cc  run_csa_search.cc
modules/raptor/: CMakeLists.txt
modules/raptor/eval/src/: print_raptor.cc  validate.cc
modules/raptor/include/motis/raptor/: cpu_raptor.h  debug_utils.h  error.h  get_gpu_timetable.h  get_raptor_query.h  get_raptor_schedule.h  print_raptor.h  raptor.h  raptor_implementation_type.h  raptor_schedule.h  raptor_search.h  raptor_statistics.h  raptor_util.h  reconstructor.h  route_conflict_graph.h
modules/raptor/include/motis/raptor/cpu/: cpu_raptor.h
modules/raptor/include/motis/raptor/criteria/: configs.h
modules/raptor/include/motis/raptor/gpu/: cluster_raptor.cuh  device_utils.h
modules/raptor/src/: get_gpu_timetable.cc  get_raptor_query.cc  get_raptor_schedule.cc  raptor.cc  route_conflict_graph.cc
modules/raptor/src/gpu/: copy_timetable.cu  device_utils.cu  everything.cu  gpu_raptor.cu  hybrid_raptor.cu
modules/raptor/test/: mc_raptor_test.cc  raptor_test.cc  raptor_test.h
modules/routing/eval/include/motis/eval/comparator/: response.h
modules/routing/eval/src/: query_generator.cc  result_comparator.cc  xtract.cc
modules/routing/include/motis/routing/: build_query.h  pareto_dijkstra.h  search_dispatch.h  statistics.h
modules/routing/include/motis/routing/label/: configs.h  connection_selector.h  label.h
modules/routing/include/motis/routing/label/criteria/: transfer_classes.h
modules/routing/include/motis/routing/output/: label_chain_parser.h  labels_to_journey.h  stop.h
modules/routing/include/motis/routing/start_label_generators/: ontrip_gen.h  pretrip_gen.h
modules/tripbased/src/: tripbased.cc
protocol/base/: Connection.fbs
protocol/routing/: RoutingRequest.fbs
test/include/motis/test/schedule/: raptor_moc.h
test/schedule/raptor_moc/: calendar.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
